# btccpu

./: CMakeLists.txt  README.md  asio.cpp  build-world.sh  build.sh  ckpool-derived-stratum-v1-spec.txt  cpu_miner.cpp  echotest.cpp  expand_compact_target.cpp  share-found.txt  time.cpp
doc/: ckpool-derived-stratum-v1-spec.md
src/: CMakeLists.txt  EventLoop.cpp  EventLoop.hpp  cpu_miner.cpp  logfile  main.cpp
src/mining_job/: backend.hpp  coinbase.cpp  coinbase.hpp  coordinator.cpp  coordinator.hpp  cpu_backend.cpp  cpu_backend.hpp  header.cpp  header.hpp  job.cpp  job.hpp  merkle.cpp  merkle.hpp  scan.cpp  scan.hpp  share.hpp  target.cpp  target.hpp  work_state.cpp  work_state.hpp
src/repro/: rejected_share_repro.cpp  repro_ckpool_python.py
src/sha256/: sha256.cpp  sha256.hpp
src/stratum_client/: messages.cpp  messages.hpp  stratum_client.cpp  stratum_client.hpp
src/util/: endian.hpp  hex.cpp  hex.hpp  uint256.hpp
tests/: inspect-slice.sh  main.cpp  test_backend.cpp  test_coordinator.cpp  test_header.cpp  test_hex.cpp  test_merkle.cpp  test_regression_share.cpp  test_sha256.cpp  test_work_state.cpp
tests/support/: accepted_fixture.hpp
